# obdh2-sim

./: .gitignore  README.md  meson.build  meson_options.txt
include/devices/: eps.h  eps_data.h  payload.h  ttc.h  ttc_data.h
include/drivers/: edc.h  sl_eps2.h  sl_ttc2.h
include/system/: context.h  sys_log.h
lib/libmop/: meson.build
lib/libmop/include/libmop/: payload.h  pl_errno.h
lib/libmop/src/: meson.build  pl_list.c
services/: obdh2-sim.service
src/: main.c  meson.build
src/devices/: eps.c  meson.build  payload.c  ttc.c
src/drivers/: edc.c  edc_delay.c  edc_gpio.c  edc_i2c.c  edc_uart.c  meson.build  sl_eps2.c  sl_eps2_delay.c  sl_eps2_i2c.c  sl_ttc2.c  sl_ttc2_delay.c  sl_ttc2_mutex.c  sl_ttc2_spi.c
src/system/: meson.build  sys_log.c
src/threads/: control_heater.c  meson.build  pos_det.c  read_edc.c  read_eps.c  read_ttc.c
subprojects/libmop/: meson.build
subprojects/libmop/include/libmop/: payload.h  pl_errno.h  pl_list.h
subprojects/libmop/src/: payload.c
subprojects/libpredict/: Makefile  meson.build
subprojects/libpredict/include/predict/: predict.h
subprojects/libpredict/src/: meson.build  orbit.c  refraction.c
